# Campus-Utility-Intelligence

./: .env.example  .gitignore  Makefile  README.md  Rules.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
data/reference/: emissions_factors_example.csv  grid_carbon_intensity_example.csv
docs/: architecture.md  data_dictionary.md  decision_log.md  final_review.md  final_review_phase_2.md  final_review_phase_3.md  final_review_phase_4.md  phase_2_plan.md  phase_3_plan.md  validation_rules.md
docs/features/: feature_10_streamlit_dashboard.md  feature_11_australia_aware_emissions_factors.md  feature_12_weather_normalized_baseline.md  feature_13_peak_shifting_simulator.md  feature_14_dashboard_extensions.md  feature_15_dashboard_visualization_polish.md  feature_16_time_varying_carbon_intensity.md  feature_17_demand_response_event_simulator.md  feature_18_demand_response_dashboard_polish.md  feature_18_forecasting_peak_risk_alerts.md  feature_19_analytics_copilot.md  feature_19_energy_anomaly_investigation.md  feature_19_forecasting_peak_risk_alerts.md  feature_1_project_setup.md  feature_20_energy_anomaly_investigation.md  feature_20_forecasting_peak_risk_alerts.md  (+12 more)
tests/: test_analytics.py  test_carbon_intensity.py  test_config.py  test_copilot.py  test_dashboard_data.py  test_demand_response.py  test_doc_index.py  test_emissions.py  test_gemini_agent.py  test_ingestion.py  test_metrics.py  test_peak_shift.py  test_profiling.py  test_quality.py  test_reconciliation.py  test_sql_safety.py  test_transformations.py  test_weather_baseline.py
(+25 files in other folders)
