[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-utility-intelligence"
version = "0.1.0"
description = "Local Python and DuckDB analytics project for campus electricity usage data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "kaggle>=1.6.17",
    "pandas>=2.2.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
